--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload": {
         "files": [
-            "app/http/helpers/helper.php"
+            "app/Http/Helpers/Helper.php"
         ],
         "psr-4": {
             "App\\": "app/",
